{
  "version": 4,
  "terraform_version": "1.3.3",
  "serial": 107,
  "lineage": "a3064606-d00e-747b-5c6f-396b4c690033",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:344488016360:loadbalancer/app/application-load-balancer/6d90bc5e2cd336e6",
            "arn_suffix": "app/application-load-balancer/6d90bc5e2cd336e6",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "application-load-balancer-1802394675.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:344488016360:loadbalancer/app/application-load-balancer/6d90bc5e2cd336e6",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "application-load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0e2518f1654972ddc"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-030a8f8bac1e55c98"
              },
              {
                "subnet_id": "subnet-0d0d8f228a61cd22c"
              }
            ],
            "subnets": [
              "subnet-030a8f8bac1e55c98",
              "subnet-0d0d8f228a61cd22c"
            ],
            "vpc_id": "vpc-0a261a6d8f84c2c02",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "fp-alb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:344488016360:listener/app/application-load-balancer/6d90bc5e2cd336e6/fb0e416e4c8bfc5b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:344488016360:targetgroup/ecs-target-group/a1531d8cafe7a6c7",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:344488016360:listener/app/application-load-balancer/6d90bc5e2cd336e6/fb0e416e4c8bfc5b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:344488016360:loadbalancer/app/application-load-balancer/6d90bc5e2cd336e6",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.alb",
            "aws_alb_target_group.target_group",
            "aws_security_group.alb_sg",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:344488016360:targetgroup/ecs-target-group/a1531d8cafe7a6c7",
            "arn_suffix": "targetgroup/ecs-target-group/a1531d8cafe7a6c7",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:344488016360:targetgroup/ecs-target-group/a1531d8cafe7a6c7",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-2:344488016360:loadbalancer/app/application-load-balancer/6d90bc5e2cd336e6"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ecs-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0a261a6d8f84c2c02"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "rt_private_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:344488016360:route-table/rtb-04049ca7df16473a7",
            "default_route_table_id": "rtb-04049ca7df16473a7",
            "id": "rtb-04049ca7df16473a7",
            "owner_id": "344488016360",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "fast-api-rt-private-default"
            },
            "tags_all": {
              "Name": "fast-api-rt-private-default"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a261a6d8f84c2c02"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:344488016360:internet-gateway/igw-0f1fa4abc4dd805ea",
            "id": "igw-0f1fa4abc4dd805ea",
            "owner_id": "344488016360",
            "tags": {
              "Name": "fast-api-igw"
            },
            "tags_all": {
              "Name": "fast-api-igw"
            },
            "vpc_id": "vpc-0a261a6d8f84c2c02"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:344488016360:route-table/rtb-09ff70c90b1f21e90",
            "id": "rtb-09ff70c90b1f21e90",
            "owner_id": "344488016360",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f1fa4abc4dd805ea",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "fast-api-rt-public"
            },
            "tags_all": {
              "Name": "fast-api-rt-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a261a6d8f84c2c02"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-rt-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aac7d37bd1d3716e",
            "route_table_id": "rtb-09ff70c90b1f21e90",
            "subnet_id": "subnet-072e6a3492ec7d5b3"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.rt_public",
            "aws_subnet.private_subnets",
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-029ecf8124e57e745",
            "route_table_id": "rtb-09ff70c90b1f21e90",
            "subnet_id": "subnet-07c3887a5d9f65a0c"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.rt_public",
            "aws_subnet.private_subnets",
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rt-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03f260d3c9fc88705",
            "route_table_id": "rtb-09ff70c90b1f21e90",
            "subnet_id": "subnet-0d0d8f228a61cd22c"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.rt_public",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b0a2643467551454",
            "route_table_id": "rtb-09ff70c90b1f21e90",
            "subnet_id": "subnet-030a8f8bac1e55c98"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.rt_public",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:344488016360:security-group/sg-0e2518f1654972ddc",
            "description": "control access to the application load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e2518f1654972ddc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-group",
            "name_prefix": "",
            "owner_id": "344488016360",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a261a6d8f84c2c02"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:344488016360:security-group/sg-057f3411dd67d0a67",
            "description": "control access to the ecs cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-057f3411dd67d0a67",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8003,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e2518f1654972ddc"
                ],
                "self": false,
                "to_port": 8003
              }
            ],
            "name": "ecs-from-alb-group",
            "name_prefix": "",
            "owner_id": "344488016360",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a261a6d8f84c2c02"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:344488016360:security-group/sg-06b022b846b087287",
            "description": "access to public instances",
            "egress": [],
            "id": "sg-06b022b846b087287",
            "ingress": [],
            "name": "public-group-default",
            "name_prefix": "",
            "owner_id": "344488016360",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a261a6d8f84c2c02"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:344488016360:security-group/sg-01d39231133d918b7",
            "description": "access to public rds instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01d39231133d918b7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e2518f1654972ddc"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "postgres-public-group",
            "name_prefix": "",
            "owner_id": "344488016360",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a261a6d8f84c2c02"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:344488016360:subnet/subnet-072e6a3492ec7d5b3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-072e6a3492ec7d5b3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "344488016360",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fast-api-tf-private-1"
            },
            "tags_all": {
              "Name": "fast-api-tf-private-1"
            },
            "vpc_id": "vpc-0a261a6d8f84c2c02"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:344488016360:subnet/subnet-07c3887a5d9f65a0c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07c3887a5d9f65a0c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "344488016360",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fast-api-tf-private-2"
            },
            "tags_all": {
              "Name": "fast-api-tf-private-2"
            },
            "vpc_id": "vpc-0a261a6d8f84c2c02"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:344488016360:subnet/subnet-0d0d8f228a61cd22c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d0d8f228a61cd22c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "344488016360",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fast-api-tf-public-1"
            },
            "tags_all": {
              "Name": "fast-api-tf-public-1"
            },
            "vpc_id": "vpc-0a261a6d8f84c2c02"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:344488016360:subnet/subnet-030a8f8bac1e55c98",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-030a8f8bac1e55c98",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "344488016360",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fast-api-tf-public-2"
            },
            "tags_all": {
              "Name": "fast-api-tf-public-2"
            },
            "vpc_id": "vpc-0a261a6d8f84c2c02"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:344488016360:vpc/vpc-0a261a6d8f84c2c02",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0791b4121d69efac3",
            "default_route_table_id": "rtb-04049ca7df16473a7",
            "default_security_group_id": "sg-074d355b4e6ebe881",
            "dhcp_options_id": "dopt-2cd01e47",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a261a6d8f84c2c02",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04049ca7df16473a7",
            "owner_id": "344488016360",
            "tags": {
              "Name": "fast-api-vpc"
            },
            "tags_all": {
              "Name": "fast-api-vpc"
            }
          }
        }
      ]
    }
  ]
}